# csview

./: .gitignore  CHANGELOG.md  csv-viewer.code-workspace  csv_viewer.css  csv_viewer.py  csview.code-workspace  main.py  pyproject.toml  signins_tui.py
src/csv_viewer/: csv_viewer.py
src/csview/: csview.py
