[tool.poetry]
name = "csv-viewer"
version = "0.1.1"
description = "CSV Viewer is a text-based CSV viewer for the terminal."
authors = ["Danny Stewart <danny@stewart.cc>"]
packages = [{include = "csv_viewer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
dsutil = {git = "https://gitlab.dannystewart.com/danny/dsutil.git"}
click = "^8.1.7"
matplotlib = "^3.9.2"
openpyxl = "^3.1.5"
pandas = "^2.2.2"
rich = "^13.8.1"
seaborn = "^0.13.2"
tabulate = "^0.9.0"
termcolor = "^2.4.0"
textual = "^0.79.1"

[tool.poetry.scripts]
csv-viewer = "csv_viewer.csv_viewer:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
